Support aria-readonly on more roles

The aria-readonly property should be supported on roles that inherit from other roles with aria-readonly support.

Bug: 748500
Change-Id: I2dd3a2d584a29168fe7f5ec596a199a822361d49